# application/controllers/Secretaries.php
@@ -36,6 +36,7 @@ class Secretaries extends EA_Controller
         'timezone',
         'language',
         'is_private',
+        'ldap_dn',
         'id_roles',
         'settings',
         'providers',
