# application/views/pages/secretaries.php
@@ -207,6 +207,15 @@
                         ]); ?>
                     </div>
 
+                    <?php if (setting('ldap_is_active')): ?>
+                        <div class="mb-3">
+                            <label for="ldap-dn" class="form-label">
+                                <?= lang('ldap_dn') ?>
+                            </label>
+                            <input type="text" id="ldap-dn" class="form-control" maxlength="100" disabled/>
+                        </div>
+                    <?php endif; ?>
+
                     <div>
                         <label class="form-label mb-3">
                             <?= lang('options') ?>
